Fixed form instructions overflow issue.

--- a/sass/partials/components/_form-component.scss
+++ b/sass/partials/components/_form-component.scss
@@ -14,6 +14,7 @@
 	display: block;
 	margin-bottom: $half-grid-padding;
 	vertical-align: middle;
+	position: relative;
 }
 
 .form__label
@@ -140,20 +141,24 @@
 	line-height: $h6-line-height;
 	color: $red;
 	margin-top: $quarter-grid-padding / 2;
-	width: 95%;
-	max-width: 450px;
+	width: 100%;
 	font-weight: bold;
 
-	&:before
-	{
-		display: inline-block;
-		content: '';
-	}
+	// &:before
+	// {
+	// 	display: inline-block;
+	// 	content: '';
+	// }
 
 	@include breakpoint($break-tiny)
 	{
+		width: 95%;
+		max-width: 450px;
+
 		&:before
 		{
+			display: inline-block;
+			content: '';
 			width: 35%;
 			max-width: 150px;
 		}
